sujet1/vpc.tf
# VPC
resource "aws_vpc" "production" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  region               = var.region
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "Production VPC"
  }
}
